Create favorite number

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <input id="numb" placeholder="Веди макс число">
-<input type="button" class="btn center-block" onclick="print(0)">
+<input type="button" class="btn center-block" onclick="print()">
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="js/app.js"></script>
